/**
  * ClientNamenodeProtocol Service定义了客户端与服务端之间的接口
  * 定义的方法同 org.DFSDemo.protocol.ClientProtocol
  */

syntax = "proto3";

option java_package = "org.DFSdemo.protocol.proto";
option java_outer_classname = "ClientNamenodeProtocolProtos";
option java_generic_services = true;//生成通用的RPC接口。默认是false
//option java_generate_equals_and_hash = true;没有作用
package org.DFSdemo.protocol.proto;//会被option java_package覆盖


message rename2RequestProto {
   optional string src = 1;
   optional string dst = 2;
}

message rename2ResponseProto {
   optional bool result = 1;
}

service ClientNamenodeProtocol{
   rpc rename2(rename2RequestProto) returns (rename2ResponseProto);
}